--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -5,7 +5,7 @@ import Hello from "./components/Hello.js";
 import LangSelect from "./components/LangSelect.js";
 
 import "../i18n";
-import { Layout, Split } from "./components";
+import { Layout, Split, Header } from "./components";
 
 import mytheme from "./theme";
 
@@ -13,28 +13,45 @@ export const theme = mytheme;
 
 <!-- Remove this code and replace with your slides-->
 
-# Welcome
+# WE/CODE
 
-<Hello />
-<br />
-<LangSelect />
+## Ironhack Mex
 
 ---
 
 export default Layout;
 
+<Header label="title.2" header={1} />
+
+---
+
+export default Split;
+
 <div>
-  <h2>mdx-deck:</h2>
-  <Appear>
-    <p>📝 Write presentations in markdown</p>
-    <p> ✍ Auto import awesome fonts from google fonts</p>
-    <p>⚛️ Import and use React components</p>
-    <p>💅 Customizable themes and components</p>
-    <p>0️⃣ Zero-config CLI</p>
-    <p>💁 Presenter mode</p>
-    <p>📓 Speaker notes</p>
-  </Appear>
+  <Header label="js.2" header={2} />
+  <ul>
+    <li>{Hello("jslist1.2")}</li>
+    <li>{Hello("jslist2.2")}</li>
+    <li>{Hello("jslist3.2")}</li>
+    <li>{Hello("jslist4.2")}</li>
+  </ul>
 </div>
+<div>
+  <Header label="videogame.2" header={2} />
+  <ul>
+    <li>{Hello("videogamelist1.2")}</li>
+    <li>{Hello("videogamelist2.2")}</li>
+    <li>{Hello("videogamelist3.2")}</li>
+    <li>{Hello("videogamelist4.2")}</li>
+  </ul>
+</div>
+
+---
+
+export default Layout;
+
+<Header label="title.3" header={1} />
+<p>{Hello("prog.3")}</p>
 
 ---
 
@@ -55,7 +72,7 @@ export default Split;
   showNumbers={false}
   dark={false}
   steps={[
-    { range: [3, 6], notes: "A range of," },
+    { range: [3, 6], notes: Hello("hello.label") },
     { tokens: { 1: [5] }, notes: "an particular element" },
     { lines: [1, 3], notes: "or a couple lines" }
   ]}
