--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -1,15 +1,15 @@
-import { Appear } from "mdx-deck";
-import { CodeSurfer } from "mdx-deck-code-surfer";
-import nightOwl from "prism-react-renderer/themes/nightOwl";
-import Hello from "./components/Hello.js";
-import LangSelect from "./components/LangSelect.js";
+import {Appear, Image} from 'mdx-deck'
+import {CodeSurfer} from 'mdx-deck-code-surfer'
+import nightOwl from 'prism-react-renderer/themes/nightOwl'
+import Hello from './components/Hello.js'
+import LangSelect from './components/LangSelect.js'
 
-import "../i18n";
-import { Layout, Split, Header } from "./components";
+import '../i18n'
+import {Layout, Split, Header} from './components'
 
-import mytheme from "./theme";
+import mytheme from './theme'
 
-export const theme = mytheme;
+export const theme = mytheme
 
 <!-- Remove this code and replace with your slides-->
 
@@ -19,43 +19,82 @@ export const theme = mytheme;
 
 ---
 
-export default Layout;
+export default Layout
 
-<Header label="title.2" header={1} />
+<Header label='title.2' header={1} />
 
 ---
 
-export default Split;
+export default Split
 
 <div>
-  <Header label="js.2" header={2} />
+  <Header label='js.2' header={2} />
   <ul>
-    <li>{Hello("jslist1.2")}</li>
-    <li>{Hello("jslist2.2")}</li>
-    <li>{Hello("jslist3.2")}</li>
-    <li>{Hello("jslist4.2")}</li>
+    <li>{Hello('jslist1.2')}</li>
+    <li>{Hello('jslist2.2')}</li>
+    <li>{Hello('jslist3.2')}</li>
+    <li>{Hello('jslist4.2')}</li>
+    <li>{Hello('jslist5.2')}</li>
+    <li>{Hello('jslist6.2')}</li>
+    <li>{Hello('jslist7.2')}</li>
+    <li>{Hello('jslist8.2')}</li>
+    <li>{Hello('jslist9.2')}</li>
+    <li>{Hello('jslist0.2')}</li>
   </ul>
 </div>
 <div>
-  <Header label="videogame.2" header={2} />
+  <Header label='videogame.2' header={2} />
   <ul>
-    <li>{Hello("videogamelist1.2")}</li>
-    <li>{Hello("videogamelist2.2")}</li>
-    <li>{Hello("videogamelist3.2")}</li>
-    <li>{Hello("videogamelist4.2")}</li>
+    <li>{Hello('videogamelist1.2')}</li>
+    <li>{Hello('videogamelist2.2')}</li>
+    <li>{Hello('videogamelist3.2')}</li>
+    <li>{Hello('videogamelist4.2')}</li>
   </ul>
 </div>
 
 ---
 
-export default Layout;
+export default Layout
 
-<Header label="title.3" header={1} />
-<p>{Hello("prog.3")}</p>
+<Header label='title.3' header={1} />
+<p>{Hello('prog.3')}</p>
 
 ---
 
-export default Split;
+export default Split
+
+<img
+  src='https://static.platzi.com/static/images/footer/logo.a76b2a87162b.png'
+  width='100%'
+/>
+<img
+  src='https://logodownload.org/wp-content/uploads/2018/12/rappi-logo.png'
+  width='80%'
+/>
+<img
+  src='https://i.pinimg.com/originals/4f/01/49/4f0149647a160a47217615866f5469c4.png'
+  width='50%'
+/>
+<img
+  src='https://d35aaqx5ub95lt.cloudfront.net/images/logo-with-duo.png'
+  width='60%'
+/>
+
+---
+
+export default Layout
+
+## ¿Qué es programar?
+
+---
+
+export default Layout
+
+Llamamos programar al proceso de solucionar un problema mediante un sistema escrito en un lenguaje de programación que una computadora es capaz de procesar.
+
+---
+
+export default Split
 
 ![](https://raw.githubusercontent.com/jxnblk/mdx-deck/master/docs/images/overview-mode.png)
 
@@ -64,28 +103,28 @@ export default Split;
 ---
 
 <CodeSurfer
-  title="Powerfull code show"
-  notes="Show your code"
-  code={require("!raw-loader!./Docs/my-snippet.js")}
-  lang="jsx"
+  title='Powerfull code show'
+  notes='Show your code'
+  code={require('!raw-loader!./Docs/my-snippet.js')}
+  lang='jsx'
   theme={nightOwl}
   showNumbers={false}
   dark={false}
   steps={[
-    { range: [3, 6], notes: Hello("hello.label") },
-    { tokens: { 1: [5] }, notes: "an particular element" },
-    { lines: [1, 3], notes: "or a couple lines" }
+    {range: [3, 6], notes: Hello('hello.label')},
+    {tokens: {1: [5]}, notes: 'an particular element'},
+    {lines: [1, 3], notes: 'or a couple lines'}
   ]}
 />
 
 ---
 
-export default Layout;
+export default Layout
 
 <img
-  src="https://iconmonstr.com/wp-content/g/gd/makefg.php?i=../assets/preview/2014/png/iconmonstr-code-fork-2.png&r=127&g=218&b=202"
-  alt="fork_logo"
-  width="50px"
+  src='https://iconmonstr.com/wp-content/g/gd/makefg.php?i=../assets/preview/2014/png/iconmonstr-code-fork-2.png&r=127&g=218&b=202'
+  alt='fork_logo'
+  width='50px'
 />
 
 [Fork me on github!](https://github.com/Jossdz/MDXSlides)
