--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -1,17 +1,22 @@
-import {Appear, Image} from 'mdx-deck'
-import {CodeSurfer} from 'mdx-deck-code-surfer'
-import nightOwl from 'prism-react-renderer/themes/nightOwl'
-import Hello from './components/Hello.js'
-import LangSelect from './components/LangSelect.js'
+import { Appear, Image } from "mdx-deck";
+import { CodeSurfer } from "mdx-deck-code-surfer";
+import nightOwl from "prism-react-renderer/themes/nightOwl";
+import Hello from "./components/Hello.js";
+import LangSelect from "./components/LangSelect.js";
 
-import '../i18n'
-import {Layout, Split, Header} from './components'
+import "../i18n";
+import { Layout, Split, Header } from "./components";
 
-import mytheme from './theme'
+import mytheme from "./theme";
 
-export const theme = mytheme
+export const theme = mytheme;
 
 <!-- Remove this code and replace with your slides-->
+
+<img
+  src="https://i.postimg.cc/FHyyF28c/IH-WHITE-LOGO-600x600.png"
+  width="200px"
+/>
 
 # WE/CODE
 
@@ -19,112 +24,197 @@ export const theme = mytheme
 
 ---
 
-export default Layout
+export default Layout;
 
-<Header label='title.2' header={1} />
+<Header label="title.2" header={1} />
 
 ---
 
-export default Split
+export default Split;
 
 <div>
-  <Header label='js.2' header={2} />
+  <Header label="js.2" header={2} />
   <ul>
-    <li>{Hello('jslist1.2')}</li>
-    <li>{Hello('jslist2.2')}</li>
-    <li>{Hello('jslist3.2')}</li>
-    <li>{Hello('jslist4.2')}</li>
-    <li>{Hello('jslist5.2')}</li>
-    <li>{Hello('jslist6.2')}</li>
-    <li>{Hello('jslist7.2')}</li>
-    <li>{Hello('jslist8.2')}</li>
-    <li>{Hello('jslist9.2')}</li>
-    <li>{Hello('jslist0.2')}</li>
+    <li>{Hello("jslist1.2")}</li>
+    <li>{Hello("jslist2.2")}</li>
+    <li>{Hello("jslist3.2")}</li>
+    <li>{Hello("jslist4.2")}</li>
+    <li>{Hello("jslist5.2")}</li>
+    <li>{Hello("jslist6.2")}</li>
+    <li>{Hello("jslist7.2")}</li>
+    <li>{Hello("jslist8.2")}</li>
+    <li>{Hello("jslist9.2")}</li>
+    <li>{Hello("jslist0.2")}</li>
   </ul>
 </div>
 <div>
-  <Header label='videogame.2' header={2} />
+  <Header label="videogame.2" header={2} />
   <ul>
-    <li>{Hello('videogamelist1.2')}</li>
-    <li>{Hello('videogamelist2.2')}</li>
-    <li>{Hello('videogamelist3.2')}</li>
-    <li>{Hello('videogamelist4.2')}</li>
+    <li>{Hello("videogamelist1.2")}</li>
+    <li>{Hello("videogamelist2.2")}</li>
+    <li>{Hello("videogamelist3.2")}</li>
+    <li>{Hello("videogamelist4.2")}</li>
   </ul>
 </div>
 
 ---
 
-export default Layout
+export default Layout;
 
-<Header label='title.3' header={1} />
-<p>{Hello('prog.3')}</p>
-
----
-
-export default Split
-
-<img
-  src='https://static.platzi.com/static/images/footer/logo.a76b2a87162b.png'
-  width='100%'
-/>
-<img
-  src='https://logodownload.org/wp-content/uploads/2018/12/rappi-logo.png'
-  width='80%'
-/>
-<img
-  src='https://i.pinimg.com/originals/4f/01/49/4f0149647a160a47217615866f5469c4.png'
-  width='50%'
-/>
-<img
-  src='https://d35aaqx5ub95lt.cloudfront.net/images/logo-with-duo.png'
-  width='60%'
-/>
+<Header label="title.3" header={1} />
+<p>{Hello("prog.3")}</p>
 
 ---
 
-export default Layout
+export default Split;
+
+<img
+  src="https://static.platzi.com/static/images/footer/logo.a76b2a87162b.png"
+  width="100%"
+/>
+<img
+  src="https://logodownload.org/wp-content/uploads/2018/12/rappi-logo.png"
+  width="80%"
+/>
+<img
+  src="https://i.pinimg.com/originals/4f/01/49/4f0149647a160a47217615866f5469c4.png"
+  width="50%"
+/>
+<img
+  src="https://d35aaqx5ub95lt.cloudfront.net/images/logo-with-duo.png"
+  width="60%"
+/>
+
+---
+
+export default Layout;
 
 ## ¿Qué es programar?
 
 ---
 
-export default Layout
+export default Layout;
 
-Llamamos programar al proceso de solucionar un problema mediante un sistema escrito en un lenguaje de programación que una computadora es capaz de procesar.
+Llamamos programar al proceso de solucionar un problema mediante un sistema escrito en un lenguaje de programación que le da ordenes a una computadora para procesarlas.
 
 ---
 
-export default Split
+export default Split;
 
-![](https://raw.githubusercontent.com/jxnblk/mdx-deck/master/docs/images/overview-mode.png)
+<div>
+  <h2>Nuestro lenguaje de programación:</h2>
+  <p>Javascript</p>
+</div>
+<img
+  src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png"
+  width="400px"
+  alt="javascript"
+/>
 
-## MDX 🤘🏼
+---
+
+export default Split;
+
+## Razones
+
+<ul>
+  <li>Es el lenguaje de la web</li>
+  <li>Es uno de los lenguajes más fáciles de aprender</li>
+  <li>Solo necesitas un editor de texto y tu navegador para empezar</li>
+  <li>
+    Tiene mucha fuerza ultimamente en la industria por poder desarrollar de todo
+    con el.
+  </li>
+</ul>
+
+---
+
+export default Layout;
+
+<h2>Herramientas</h2>
+<div>
+  <a href="https://code.visualstudio.com/download" target="__blank">
+    <img
+      src="https://cdn.worldvectorlogo.com/logos/visual-studio-code-1.svg"
+      alt="vscode"
+      style={{ marginRight: "3em", width: "20%" }}
+    />
+  </a>
+  <a
+    href="https://www.google.com.mx/intl/es-419/chrome/?brand=CHBD&gclid=CjwKCAiA_f3uBRAmEiwAzPuaM1xsPg6iESdHbKqC95pGPrikUHrVxMxS78iQvdh-ugTygIWZ_-2aVBoC2eUQAvD_BwE&gclsrc=aw.ds"
+    target="__blank"
+  >
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Google_Chrome_icon_%28September_2014%29.svg/1024px-Google_Chrome_icon_%28September_2014%29.svg.png"
+      alt="google chrome"
+      style={{ marginLeft: "3em", width: "20%" }}
+    />
+  </a>
+</div>
+
+---
+
+export default Layout;
+
+# Taller de Javascript
+
+<img
+  src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png"
+  width="200px"
+  alt="javascript"
+/>
 
 ---
 
 <CodeSurfer
-  title='Powerfull code show'
-  notes='Show your code'
-  code={require('!raw-loader!./Docs/my-snippet.js')}
-  lang='jsx'
+  title="Console"
+  notes="Mostrar información en consola"
+  code={require("!raw-loader!./Docs/my-snippet.js")}
+  lang="js"
   theme={nightOwl}
   showNumbers={false}
   dark={false}
   steps={[
-    {range: [3, 6], notes: Hello('hello.label')},
-    {tokens: {1: [5]}, notes: 'an particular element'},
-    {lines: [1, 3], notes: 'or a couple lines'}
+    {
+      tokens: { 1: [0] },
+      notes: "es una herramienta que nos permite mostrar info en consola"
+    },
+    {
+      tokens: { 1: [2] },
+      notes: "tiene métodos para mostrar diferente información"
+    },
+    { tokens: { 1: [2] }, notes: "log, error, dir, etc." },
+    {
+      tokens: { 1: [3, 4, 5] },
+      notes: "y requiere el mensaje entre parentesis."
+    }
   ]}
 />
 
 ---
 
-export default Layout
+export default Layout;
+
+<CodeSurfer
+  title="Variables"
+  notes="¿Existe manera de Guardar la información?"
+  code={require("!raw-loader!./Docs/my-snippet.js")}
+  lang="js"
+  theme={nightOwl}
+  showNumbers={false}
+  dark={false}
+  steps={[
+   
+  ]}
+/>
+---
+
+export default Layout;
 
 <img
-  src='https://iconmonstr.com/wp-content/g/gd/makefg.php?i=../assets/preview/2014/png/iconmonstr-code-fork-2.png&r=127&g=218&b=202'
-  alt='fork_logo'
-  width='50px'
+  src="https://iconmonstr.com/wp-content/g/gd/makefg.php?i=../assets/preview/2014/png/iconmonstr-code-fork-2.png&r=127&g=218&b=202"
+  alt="fork_logo"
+  width="50px"
 />
 
 [Fork me on github!](https://github.com/Jossdz/MDXSlides)
