--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -26,24 +26,22 @@ export const theme = mytheme;
 
 export default Layout;
 
-<Header label="title.2" header={1} />
+# José Carlos Correa
+
+## (Joss)
+
+- Ingeniería en sistemas
+- Comunidades de desarrollo
+- LT en Ironhack México
+- Profesor en Platzi
+- Desarrollador Fullstack
+- Frontend ♥︎
 
 ---
 
 export default Split;
 
-## Taller de Javascript
-
-- Introducción
-- configuración de herramientas
-- variables
-- tipos de datos
-- Estructuras de datos
-- Expresiones
-- Estructuras condicionales
-- ciclos
-- Funciones
-- intro a Dom y Canvas
+## Taller de programación con Javascript
 
 ---
 
@@ -766,8 +764,57 @@ export default Layout;
   dark={false}
   steps={[
     {
-      range: [1, 5],
-      notes: "Ahora que conocemos funciones y arreglos,"
+      tokens: { 1: [0] },
+      notes: "Para trabajar con poo usamos class"
+    },
+    {
+      tokens: { 1: [2] },
+      notes: "seguido de un nombre, que usualmente empieza con mayuscula"
+    },
+    {
+      range: [2, 6],
+      notes:
+        "al igual que un objeto, este tiene propiedades pero como variables"
+    },
+    {
+      tokens: { 3: [1], 4: [1], 5: [1] },
+      notes: "this nos ayuda a que cada carro lleve sus propias propiedades"
+    },
+    {
+      tokens: { 2: [3, 4, 5], 3: [3, 5, 6], 4: [3, 5, 6] },
+      notes: "si queremos variar los valores iniciales podemos recibir params"
+    },
+    {
+      range: [7, 9],
+      notes: "también pueden tener funciones, conocidas como métodos"
+    },
+    {
+      lines: [8],
+      notes: "y afectar propiedades de cada objeto."
+    },
+    {
+      lines: [12],
+      notes: "para crear un nuevo objeto de la clase creamos una variable"
+    },
+    {
+      tokens: { 12: [5, 6, 7, 8, 9, 10, 11, 12, 13] },
+      notes: "que contiene un nuevo objeto de cierta clase."
     }
   ]}
 />
+
+---
+
+export default Layout;
+
+## Ejercicio pokemon
+
+<img
+  src="https://miro.medium.com/max/970/1*y0-zWEUPYi6TRuz0lC-0Ig.jpeg"
+  alt="pokemon"
+  width="500px"
+/>
+<br />
+<A target="__blank" href="https://repl.it/languages/babel">
+  repl.it
+</A>
